# pdffs

./: .gitignore  main.py  main_2nd_nov.py  main_backup.py  main_backup2.py  main_before_flask_enhancements.py  main_excel_works.py  main_for_pptx.py  pyproject.toml  readme.txt  replit.nix  requirements.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: .agent_state_0783fe2437db2239f4436b925a049dc8a6636d3d.json  .agent_state_16a416c9bf1d16c6afdc56f69658e534d13e2617.json  .agent_state_2b3f55e16641f659e4ec68b490864426d34cc177.json  .agent_state_9143a0aaa71fd5541248f4bf1c36f371f7a068c9.json  .agent_state_ad5c820ffa44ac61fa7e435edd22babb3f9e14c1.json  .agent_state_main.json  repl_state.json
.upm/: store.json
static/css/: styles.css  styles_backup.css  styles_old.css
static/js/: dragdrop.js  dragdrop_backup.js  pdf_fill.js  script.js
templates/: base.html  base_old.html  compress.html  convert.html  delete_pages.html  fill_form_view.html  form_fill.html  html_to_pdf.html  index.html  merge.html  ocr.html  ocr_pdf.html  ocr_result.html  page_numbers.html  rotate.html  split.html  url_to_pdf.html  watermark.html
utils/: file_conversions.py  file_conversions2.py  file_conversions_SOS_Copy.py  file_conversions_backup.py  file_conversions_excel_works.py  file_conversions_new_approach_didnt_work.py  file_conversions_temp_trying_image.py  file_conversions_works.py  pdf_operations.py  pdf_operations_3rd_Nov.py  pdf_operations_backup_3rd_nov.py
(+7 files in other folders)
